useState for finish button

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ h1, h2 {
   text-align: right;
 }
 
-.modal {
+.trigger {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   background-color: white;
